# definatelynottindercopybot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  utils.py
