[tool.poetry]
name = "definatelynottindercopybot"
version = "0.1.0"
description = ""
authors = ["keddad <keddad@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^12.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
rope = "^0.17.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
