[tool.poetry]
name = "definatelynottindercopybot"
version = "0.1.0"
description = ""
authors = ["keddad <keddad@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.2"
pymongo = "^3.10.1"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
rope = "^0.17.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
